Add hover state to row title

--- a/css/main.css
+++ b/css/main.css
@@ -85,6 +85,11 @@ body {
     margin: 0;
     color: var(--veryDarkGrayishBlue);
     cursor: pointer;
+    transition: 0.3s all;
+}
+
+.title:hover {
+    color: var(--softRed);
 }
 
 .title-text {
